Ensure football components load in correct position on mobile

--- a/common/app/assets/stylesheets/module/_article.scss
+++ b/common/app/assets/stylesheets/module/_article.scss
@@ -801,12 +801,17 @@
 }
 
 .after-article {
+    position: relative;
     display: block;
     content: " ";
     @include rem((
         top: -$gs-baseline*2
     ));
-    position: relative;
+
+    //This is required for football components, please do not remove
+    @include mq(rightCol) {
+        display: none;
+    }
 }
 
 .drop-cap {
